--- a/Lab Assignment 3/Assignment3.ipynb
+++ b/Lab Assignment 3/Assignment3.ipynb
@@ -38,7 +38,7 @@
     "|----------|------------|-----------|-----------------------------|-------|----------------|\n",
     "| Member 1: | Saba | Shabnam | Saba Shabnam | 5 | 25% |\n",
     "| Member 2: | Kamsy | Nnodu | Kamsy Nnodu | 5 | 25% |\n",
-    "| Member 3: | First Name | Last Name | Signature | Hours | Contribution |\n",
+    "| Member 3: | Sarah | Jasim | Signature | Hours | Contribution |\n",
     "| Member 4: | First Name | Last Name | Signature | Hours | Contribution |\n"
    ]
   },
