--- a/Lab Assignment 3/Assignment3.ipynb
+++ b/Lab Assignment 3/Assignment3.ipynb
@@ -36,10 +36,10 @@
    "source": [
     "|          | First Name | Last Name | Signature (Full Name, Date) | Hours | Contribution % |\n",
     "|----------|------------|-----------|-----------------------------|-------|----------------|\n",
-    "| Member 1: | Saba | Shabnam | Saba Shabnam | 5 | 25% |\n",
-    "| Member 2: | Kamsy | Nnodu | Kamsy Nnodu | 5 | 25% |\n",
-    "| Member 3: | Sarah | Jasim | Sarah Jasim 07/11/24 | 2.5 | 25% |\n",
-    "| Member 4: | Christopher | Roberts | Christopher Roberts 07/11/24 | 5 | 25% |\n"
+    "| Member 1: | Saba | Shabnam | Saba Shabnam, 24/10/23 | 5 | 25% |\n",
+    "| Member 2: | Kamsy | Nnodu | Kamsy Nnodu, 24/11/04 | 5 | 25% |\n",
+    "| Member 3: | Sarah | Jasim | Sarah Jasim, 24/11/07 | 2.5 | 25% |\n",
+    "| Member 4: | Christopher | Roberts | Christopher Roberts, 24/11/07 | 5 | 25% |\n"
    ]
   },
   {
@@ -1393,7 +1393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
